# musicfox-gnome-lyric

./: README.md  install.sh
backend/: CMakeLists.txt  musicfox-gnome-extension.code-workspace
backend/include/: dbus_client.h  lyric_fetcher.h
backend/my_backend/: compile.sh  dbus_exit_listener  dbus_exit_listener.cpp  dbus_service.cpp  mpris_listener.cpp  music-info-service  music-info-service-generated.c  music-info-service-generated.h  music_info_service.xml  test  test.cpp
backend/src/: dbus_client.cpp  lyric_fetcher.cpp  main.cpp  test  test.cpp
extension/: extension.js  metadata.json
frontend/: extension.js  metadata.json  music-info-service
scripts/: build.sh
